          protocol status is shown. Also supports custom status mode names using the XStatusName
          db setting (supported by ICQJ and ISee).
          
        ! typo in the template parser (%m variable)
        
        * removed smiley selection window focus workaround. No longer necessary, because 
          fixed smileyadd doesn't mess up input focus any more.

Version 0.9.9.96 - 2005/07/18

        ! null pointer check when retrieving status message. Fixes crash when retrieving
          status messages.
        
        ! fixed window icon problem (autoswitch related)
        
        * added range checks for the panel splitter (don't save/load "invalid" values)

        ! fixed icon on the "visibility indicator" in the info panel (only, when
          using the manual quick toggle mode).
          
        ! fixed "sticky" unread icon (didn't always go away when container got the focus.
        
        ! corrected some typos
        
        ! minor info panel fixes (toolbar menu)
        
        * allow close tab within error state (visible error controls), Unsent messages which
          returned an error are canceled. Messages "in progress" may still be sent, but the
          ACK will then go to nowhere after the msg window has been closed.
        
        * version bump (0.9.9.96)
        
        * added %x variable for the titlebar to show the extended status mode description.
          The following variables are now available:
          %n - Nickname
          %s - Status mode description
          %c - container name
          %u - UIN
          %p - protocol
          %x - extended status mode description (icq only)
        
        + added ability to use underlined fonts in the message window when configured with
          the font service plugin.

        + the user notes field now follows the message input area configuration more closely.

        ! some container settings didn't "stick" when set from the system menu or title bar