@@ -1,7 +1,7 @@
 /*
 Miranda SmileyAdd Plugin
 Plugin support header file
-Copyright (C) 2004 Rein-Peter de Boer (peacow)
+Copyright (C) 2004 Rein-Peter de Boer (peacow), and followers
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -18,8 +18,6 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
-//examples!!!!!
-
 
 //replace smileys in a rich edit control... 
 //wParam = (WPARAM) 0; not used
@@ -28,22 +26,22 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 typedef struct 
 {
-  int cbSize;                //size of the structure
-	HWND hwndRichEditControl;  //handle to the rich edit control
-	CHARRANGE* rangeToReplace; //same meaning as for normal Richedit use (NULL = replaceall)
-  const char* Protocolname;  //protocol to use... if you have defined a protocol, u can 
-                             //use your own protocol name. SmileyAdd wil automatically 
-                             //select the smileypack that is defined for your protocol.
-                             //Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
-                             //if you prefer those icons. 
-                             //If not found or NULL, "Standard" will be used
-  BOOL useSounds;            //NOT IMPLEMENTED YET, set to FALSE
-  BOOL disableRedraw;        //If true then no redraw/refresh will be done. For performance
-                             //this is recommend. Disable redraw, etc yourself first, and then
-                             //refresh after the call to smileyadd.. This will give YOU the 
-                             //control on what en where to refresh. 
-                             //->>everything will be screwed up and not restored.
-                             //TRUE is recommended -> disable&save redraw, restore yourself.
+	int cbSize;					//size of the structure
+	HWND hwndRichEditControl;	//handle to the rich edit control
+	CHARRANGE* rangeToReplace;	//same meaning as for normal Richedit use (NULL = replaceall)
+	const char* Protocolname;	//protocol to use... if you have defined a protocol, u can 
+								//use your own protocol name. SmileyAdd wil automatically 
+								//select the smileypack that is defined for your protocol.
+								//Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
+								//if you prefer those icons. 
+								//If not found or NULL, "Standard" will be used
+	BOOL useSounds;				//NOT IMPLEMENTED YET, set to FALSE
+	BOOL disableRedraw;			//If true then no redraw/refresh will be done. For performance
+								//this is recommend. Disable redraw, etc yourself first, and then
+								//refresh after the call to smileyadd.. This will give YOU the 
+								//control on what en where to refresh. 
+								//->>everything will be screwed up and not restored.
+								//TRUE is recommended -> disable&save redraw, restore yourself.
 } SMADD_RICHEDIT2;
 
 #define MS_SMILEYADD_REPLACESMILEYS  "SmileyAdd/ReplaceSmileys"
@@ -51,22 +49,23 @@ typedef struct
 
 typedef struct 
 {
-  int cbSize;                //size of the structure
-  const char* Protocolname;  //protocol to use... if you have defined a protocol, u can 
-                             //use your own protocol name. Smiley add wil automatically 
-                             //select the smileypack that is defined for your protocol.
-                             //Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
-                             //if you prefer those icons. 
-                             //If not found or NULL: "Standard" will be used
-  int xPosition;             //Postition to place the selectwindow
-  int yPosition;             // "
-  int Direction;             //Direction (i.e. size upwards/downwards/etc) of the window 0, 1, 2, 3
-  
-	HWND hwndTarget;           //Window, where to send the message when smiley is selected.
-  UINT targetMessage;        //Target message, to be sent.
-  LPARAM targetWParam;       //Target WParam to be sent (LParam will be char* to select smiley)
-                             //see the example file.
-} SMADD_SHOWSEL;
+	int cbSize;					//size of the structure
+	const char* Protocolname;	//protocol to use... if you have defined a protocol, u can 
+								//use your own protocol name. Smiley add wil automatically 
+								//select the smileypack that is defined for your protocol.
+								//Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
+								//if you prefer those icons. 
+								//If not found or NULL: "Standard" will be used
+	int xPosition;				//Postition to place the selectwindow
+	int yPosition;				// "
+	int Direction;				//Direction (i.e. size upwards/downwards/etc) of the window 0, 1, 2, 3
+
+	HWND hwndTarget;			//Window, where to send the message when smiley is selected.
+	UINT targetMessage;			//Target message, to be sent.
+	LPARAM targetWParam;		//Target WParam to be sent (LParam will be char* to select smiley)
+								//see the example file.
+	HWND hwndParent;			//Parent window for smiley dialog 
+} SMADD_SHOWSEL2;
 
 #define MS_SMILEYADD_SHOWSELECTION  "SmileyAdd/ShowSmileySelection"
 
@@ -78,12 +77,12 @@ typedef struct
 //return: TRUE if SmileySequence starts with a smiley, FALSE if not
 typedef struct 
 {
-  int cbSize;             //same as in SMADD_RICHEDIT
-  char* Protocolname;     //   "             "
-  char* SmileySequence;   //character string containing the smiley 
-  HICON SmileyIcon;       //RETURN VALUE: this is filled with the icon handle... 
-                          //do not destroy!
-  int Smileylength;       //length of the smiley that is found.
+	int cbSize;             //same as in SMADD_RICHEDIT
+	char* Protocolname;     //   "             "
+	char* SmileySequence;   //character string containing the smiley 
+	HICON SmileyIcon;       //RETURN VALUE: this is filled with the icon handle... 
+							//do not destroy!
+	unsigned Smileylength;  //length of the smiley that is found.
 } SMADD_GETICON;
 
 #define MS_SMILEYADD_GETSMILEYICON "SmileyAdd/GetSmileyIcon"
@@ -94,22 +93,16 @@ typedef struct
 //lParam = (LPARAM) (SMADD_GETINFO*) &smgi;  //pointer to SmAddRicheditStructure
 typedef struct 
 {
-  int cbSize;             //same as in SMADD_RICHEDIT
-  char* Protocolname;     //   "             "
-  HICON ButtonIcon;       //RETURN VALUE: this is filled with the icon handle
-                          //of the smiley that can be used on the button
-                          //do not destroy! NULL if the buttonicon is not defined...
-  int NumberOfVisibleSmileys;    //Number of visible smileys defined.
-  int NumberOfSmileys;    //Number of total smileys defined
-
+	int cbSize;             //same as in SMADD_RICHEDIT
+	char* Protocolname;     //   "             "
+	HICON ButtonIcon;       //RETURN VALUE: this is filled with the icon handle
+							//of the smiley that can be used on the button
+							//do not destroy! NULL if the buttonicon is not defined...
+	int NumberOfVisibleSmileys;    //Number of visible smileys defined.
+	int NumberOfSmileys;    //Number of total smileys defined
 } SMADD_INFO;
 
 #define MS_SMILEYADD_GETINFO "SmileyAdd/GetInfo"
-
-
-
-
-
 
 //
 //
@@ -117,22 +110,39 @@ typedef struct
 //
 //
 
+//version for smileyadd < 1.5
+typedef struct 
+{
+	int cbSize;					//size of the structure
+	const char* Protocolname;	//protocol to use... if you have defined a protocol, u can 
+								//use your own protocol name. Smiley add wil automatically 
+								//select the smileypack that is defined for your protocol.
+								//Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
+								//if you prefer those icons. 
+								//If not found or NULL: "Standard" will be used
+	int xPosition;				//Postition to place the selectwindow
+	int yPosition;				// "
+	int Direction;				//Direction (i.e. size upwards/downwards/etc) of the window 0, 1, 2, 3
+
+	HWND hwndTarget;			//Window, where to send the message when smiley is selected.
+	UINT targetMessage;			//Target message, to be sent.
+	LPARAM targetWParam;		//Target WParam to be sent (LParam will be char* to select smiley)
+								//see the example file.
+} SMADD_SHOWSEL;
 
 //version for smileyadd < 1.2
 typedef struct 
 {
-  int cbSize;                //size of the structure
-	HWND hwndRichEditControl;  //handle to the rich edit control
-	CHARRANGE* rangeToReplace; //same meaning as for normal Richedit use (NULL = replaceall)
-  char* Protocolname;        //protocol to use... if you have defined a protocol, u can 
-                             //use your own protocol name. Smiley add wil automatically 
-                             //select the smileypack that is defined for your protocol.
-                             //Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
-                             //if you prefer those icons. 
-                             //If not found or NULL: "Standard" will be used
+	int cbSize;					//size of the structure
+	HWND hwndRichEditControl;	//handle to the rich edit control
+	CHARRANGE* rangeToReplace;	//same meaning as for normal Richedit use (NULL = replaceall)
+	char* Protocolname;			//protocol to use... if you have defined a protocol, u can 
+								//use your own protocol name. Smiley add wil automatically 
+								//select the smileypack that is defined for your protocol.
+								//Or, use "Standard" for standard smiley set. Or "ICQ", "MSN"
+								//if you prefer those icons. 
+								//If not found or NULL: "Standard" will be used
  } SMADD_RICHEDIT;
-
-
 
 #define MS_SMILEYADD_GETSMILEYICON "SmileyAdd/GetSmileyIcon"
 
